--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,16 @@
     "authors": [
         {
             "name": "IAmMasterCraft",
-            "email": "bolu.akinsefunmi@gmail.com"
+            "email": "bolu.akinsefunmi@gmail.com",
+            "homepage": "https://github.com/IAmMasterCraft"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^7.4|^8.0",
+        "guzzlehttp/guzzle": "^7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
+    "minimum-stability": "stable"
 }
